exports['html getWebTreeMapData should add coverage data and background color 1'] = {
  "name": "/",
  "data": {
    "$area": 21,
    "coveredSize": 9,
    "backgroundColor": "rgb(255, 218, 0)"
  },
  "children": [
    {
      "name": "a/b/c.js",
      "data": {
        "$area": 1,
        "coveredSize": 1,
        "backgroundColor": "rgb(0, 255, 0)"
      }
    },
    {
      "name": "d",
      "data": {
        "$area": 14,
        "coveredSize": 8,
        "backgroundColor": "rgb(218, 255, 0)"
      },
      "children": [
        {
          "name": "e.js",
          "data": {
            "$area": 2,
            "coveredSize": 1,
            "backgroundColor": "rgb(255, 255, 0)"
          }
        },
        {
          "name": "f.js",
          "data": {
            "$area": 3,
            "coveredSize": 2,
            "backgroundColor": "rgb(170, 255, 0)"
          }
        },
        {
          "name": "g/h.js",
          "data": {
            "$area": 4,
            "coveredSize": 3,
            "backgroundColor": "rgb(127, 255, 0)"
          }
        },
        {
          "name": "j/k.js",
          "data": {
            "$area": 5,
            "coveredSize": 2,
            "backgroundColor": "rgb(255, 204, 0)"
          }
        }
      ]
    },
    {
      "name": "z",
      "data": {
        "$area": 6,
        "coveredSize": 0,
        "backgroundColor": "rgb(255, 0, 0)"
      }
    }
  ]
}

exports['html getWebTreeMapData should collapse non-contributing nodes 1'] = {
  "name": "/",
  "data": {
    "$area": 28
  },
  "children": [
    {
      "name": "a/b/c.js",
      "data": {
        "$area": 1
      }
    },
    {
      "name": "d",
      "data": {
        "$area": 20
      },
      "children": [
        {
          "name": "e.js",
          "data": {
            "$area": 2
          }
        },
        {
          "name": "f.js",
          "data": {
            "$area": 3
          }
        },
        {
          "name": "g",
          "data": {
            "$area": 9
          },
          "children": [
            {
              "name": "h.js",
              "data": {
                "$area": 4
              }
            },
            {
              "name": "i.js",
              "data": {
                "$area": 5
              }
            }
          ]
        },
        {
          "name": "j/i.js",
          "data": {
            "$area": 6
          }
        }
      ]
    },
    {
      "name": "z",
      "data": {
        "$area": 7
      }
    }
  ]
}

exports['html getWebTreeMapData should not create node for zero size files 1'] = {
  "name": "/",
  "data": {
    "$area": 15
  },
  "children": [
    {
      "name": "a/b/c.js",
      "data": {
        "$area": 1
      }
    },
    {
      "name": "d",
      "data": {
        "$area": 14
      },
      "children": [
        {
          "name": "e.js",
          "data": {
            "$area": 2
          }
        },
        {
          "name": "f.js",
          "data": {
            "$area": 3
          }
        },
        {
          "name": "g/h.js",
          "data": {
            "$area": 4
          }
        },
        {
          "name": "j/k.js",
          "data": {
            "$area": 5
          }
        }
      ]
    }
  ]
}

exports['html getWebTreeMapData should not split webpack:/// when collapsing non-contributing nodes 1'] = {
  "name": "/",
  "data": {
    "$area": 28
  },
  "children": [
    {
      "name": "webpack:///",
      "data": {
        "$area": 6
      },
      "children": [
        {
          "name": "a/b/c.js",
          "data": {
            "$area": 1
          }
        },
        {
          "name": "d",
          "data": {
            "$area": 5
          },
          "children": [
            {
              "name": "e.js",
              "data": {
                "$area": 2
              }
            },
            {
              "name": "f.js",
              "data": {
                "$area": 3
              }
            }
          ]
        }
      ]
    },
    {
      "name": "d",
      "data": {
        "$area": 15
      },
      "children": [
        {
          "name": "webpack:///",
          "data": {
            "$area": 9
          },
          "children": [
            {
              "name": "g",
              "data": {
                "$area": 9
              },
              "children": [
                {
                  "name": "h.js",
                  "data": {
                    "$area": 4
                  }
                },
                {
                  "name": "i.js",
                  "data": {
                    "$area": 5
                  }
                }
              ]
            }
          ]
        },
        {
          "name": "j/i.js",
          "data": {
            "$area": 6
          }
        }
      ]
    },
    {
      "name": "z",
      "data": {
        "$area": 7
      }
    }
  ]
}

exports['html makeMergedTreeDataMap should return merged webtreemap data 1'] = {
  "name": "[combined]",
  "data": {
    "name": "/",
    "data": {
      "$area": 23
    },
    "children": [
      {
        "name": "a.js",
        "data": {
          "$area": 10
        },
        "children": [
          {
            "name": "a1.js",
            "data": {
              "$area": 7
            }
          },
          {
            "name": "a2.js",
            "data": {
              "$area": 3
            }
          }
        ]
      },
      {
        "name": "b.js",
        "data": {
          "$area": 13
        },
        "children": [
          {
            "name": "b1.js",
            "data": {
              "$area": 1
            }
          },
          {
            "name": "b2.js",
            "data": {
              "$area": 4
            }
          },
          {
            "name": "b3.js",
            "data": {
              "$area": 8
            }
          }
        ]
      }
    ]
  }
}
